Let @Noul/@Choice/@Score map to the full Answer subtype, not just its scalar
A component can now be typed as Answer.Noul/Answer.Choice/Answer.Score
instead of double/String, to get probabilities()/confidence()/legend()
back too. Previously the only way to reach those was to drop
evaluateTyped and fall back to a plain evaluate() call plus a manual
Map<String, Answer> lookup. Same annotation, same validation path:
requireType now accepts either the scalar type or the matching Answer
subtype, and componentMappingFor picks the identity extraction instead
of unwrapping the scalar when it sees the full type.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>